--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,16 @@
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=
+server.port=8060
+spring.datasource.url=jdbc:log4jdbc:h2:tcp://localhost/~/test
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=
+
+# query log
+logging.level.jdbc.sqlonly=off
+logging.level.jdbc.sqltiming=info
+logging.level.jdbc.resultsettable=info
+logging.level.jdbc.audit=off
+logging.level.jdbc.resultset=off
+logging.level.jdbc.connection=off
+
+
