--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.username=sa
 spring.datasource.password=
 
+# ?? ??? ??? html,css ??
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+
 # query log
 logging.level.jdbc.sqlonly=off
 logging.level.jdbc.sqltiming=info
@@ -12,5 +18,6 @@ logging.level.jdbc.resultsettable=info
 logging.level.jdbc.audit=off
 logging.level.jdbc.resultset=off
 logging.level.jdbc.connection=off
+
 
 
