--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=8060
-spring.datasource.url=jdbc:log4jdbc:h2:tcp://localhost/~/test
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xepdb1
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:h2:tcp://localhost/~/test
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=MYDB
+spring.datasource.password=1234
 
 # ?? ??? ??? html,css ??
 spring.devtools.livereload.enabled=true
